手动修复链接以及翻译

--- a/html/安娜·索罗金.html
+++ b/html/安娜·索罗金.html
@@ -68,45 +68,32 @@
       <td class="infobox-data">4 至 12 年监禁，24,000 美元罚款，199,000 美元赔偿，<a
           href="https://en.wiki.chinapedia.org/wiki/Deportation" title="递解出境">驱逐</a>回德国</td>
     </tr>
-    <tr style="display:none">
-      <td colspan="2">
-      </td>
-    </tr>
   </tbody>
 </table>
 <p><b>安娜·索罗金</b>（<a href="https://en.wiki.chinapedia.org/wiki/Russian_language" title="俄语">俄语</a>：<span lang="ru">Анна
     Сорокина</span>；1991 年 1 月 23 日出生），又名安娜·<b>德尔维</b>，是一名<a href="https://en.wiki.chinapedia.org/wiki/Con_artist"
     class="mw-redirect" title="骗子">骗子</a>和<a href="https://en.wiki.chinapedia.org/wiki/Fraud" title="欺诈罪">诈骗犯</a>，在 2013
   年至 2017 年间冒充富有的<a href="https://en.wiki.chinapedia.org/wiki/Inheritance" title="遗产">女继承人</a>进入纽约社交和艺术界的上流社会.</p>
-<p><a href="https://en.wiki.chinapedia.org/wiki/Soviet_Union" title="苏联">索罗金出生于苏联</a>（现<a
-    href="https://en.wiki.chinapedia.org/wiki/Russia" title="俄罗斯">俄罗斯</a>）的工薪阶层家庭，2007 年 16 岁时随家人从俄罗斯移民到德国。2011
-  年，她离开德国前往伦敦和巴黎居住，之后搬到纽约<a href="https://en.wiki.chinapedia.org/wiki/New_York_City"
-    title="纽约市">市2013年，她在法国时尚杂志</a><i><a href="https://en.wiki.chinapedia.org/wiki/Purple_(magazine)"
-      title="紫色（杂志）">Purple</a></i>实习<i>。</i>Sorokin 设想了一个私人会员俱乐部和艺术基金会，其中包括租用一栋大型建筑来开设<a
+<p>索罗金出生于<a href="https://en.wiki.chinapedia.org/wiki/Soviet_Union" title="苏联">苏联</a>（现<a
+    href="https://en.wiki.chinapedia.org/wiki/Russia" title="俄罗斯">俄罗斯</a>）的工薪阶层家庭，2007年16岁时随家人从俄罗斯移民到德国。2011
+  年，她离开德国前往伦敦和巴黎居住，之后搬到<a href="https://en.wiki.chinapedia.org/wiki/New_York_City"
+    title="纽约市">纽约市</a>。2013年，她在法国时尚杂志<i><a href="https://en.wiki.chinapedia.org/wiki/Purple_(magazine)"
+      title="紫色（杂志）">Purple</a></i>实习。Sorokin 设想了一个私人会员俱乐部和艺术基金会，其中包括租用一栋大型建筑来开设<a
     href="https://en.wiki.chinapedia.org/wiki/Pop-up_shop" class="mw-redirect"
     title="快闪店">快闪店</a>以及她在实习期间遇到的著名艺术家的展览。她后来制作了虚假的财务文件来证实她拥有数百万欧元信托基金的说法，并伪造了多份电汇确认书。索罗金使用这些文件以及欺诈性支票诱骗银行、熟人和房地产经纪人支付现金并发放大额无抵押贷款。她用这笔钱来资助她奢侈的生活方式，包括在多家高档酒店居住。2013年至2017年间，索罗金诈骗骗取各大金融机构、银行、酒店和个人共计27.5万美元。
 </p>
-<p>2017 年，<a href="https://en.wiki.chinapedia.org/wiki/New_York_City_Police_Department"
-    title="纽约市警察局">纽约警察局在她的前朋友雷切尔·</a><a href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams"
-    title="Rachel DeLoache Williams">德洛奇·威廉姆斯 (Rachel DeLoache Williams)</a>的帮助下，在一次<a
-    href="https://en.wiki.chinapedia.org/wiki/Sting_operation" title="卧底行动">诱捕行动</a>中逮捕了索罗金，后者指控索罗金诈骗了她 62,000
-  美元。2019年，索罗金在纽约州法院被判犯有未遂<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny" class="mw-redirect"
-    title="Grand larceny">重大盗窃罪</a>、二级盗窃罪和<a href="https://en.wiki.chinapedia.org/wiki/Theft_of_services"
-    title="Theft of services">盗窃服务罪</a>，被判处4至12年有期徒刑。<a
+<p>2017年，<a href="https://en.wiki.chinapedia.org/wiki/New_York_City_Police_Department"
+    title="纽约市警察局">纽约警察局</a>在她的朋友<a href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams" title="Rachel DeLoache Williams">雷切尔·德洛奇·威廉姆斯 (Rachel DeLoache Williams)</a>的帮助下，在一次<a href="https://en.wiki.chinapedia.org/wiki/Sting_operation" title="卧底行动">诱捕行动</a>中逮捕了索罗金，后者指控索罗金诈骗了她62,000美元。2019年，索罗金在纽约州法院被判犯有<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny" class="mw-redirect"
+    title="Grand larceny">重大盗窃罪</a>未遂、二级盗窃罪和<a href="https://en.wiki.chinapedia.org/wiki/Theft_of_services"
+    title="Theft of services">盗窃服务罪</a>，被判处4至12年有期徒刑。服刑两年后，她被<a
     href="https://en.wiki.chinapedia.org/wiki/U.S._Immigration_and_Customs_Enforcement"
-    title="U.S. Immigration and Customs Enforcement">服刑两年后，她被美国移民和海关执法</a>局还押，准备遣返德国。2022 年 10 月 5 日，索罗金获得 10,000
-  美元的保释金并出狱。<sup id="cite_ref-Reul_3-0" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup><a
-    href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams" title="雷切尔·德洛奇·威廉姆斯"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Grand_larceny" class="mw-redirect" title="重大盗窃罪"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Theft_of_services" title="窃取服务"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/U.S._Immigration_and_Customs_Enforcement" title="美国移民和海关执法"></a><sup
-    id="cite_ref-Reul_3-0" class="reference"><a href="#cite_note-Reul-3"></a></sup>自 2022 年 10 月起，索罗金必须在电子监控下进行 24
+    title="U.S. Immigration and Customs Enforcement">美国移民和海关执法局</a>关押，准备遣返德国。2022 年 10 月 5 日，索罗金获得 10,000
+  美元的保释金并出狱。<sup id="cite_ref-Reul_3-0" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>自 2022 年 10 月起，索罗金必须在电子监控下进行 24
   小时居家隔离，并且不得使用社交媒体。<sup id="cite_ref-Reul_3-1" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>
 </p>
-<p>2018 年，威廉姆斯在《名利场<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
-    title="Vanity Fair (magazine)"><i>》(Vanity Fair)上写了一篇关于她与索罗金的经历的长篇文章</i></a><sup id="cite_ref-4"
-    class="reference"><a href="#cite_note-4">[4]，索罗</a></sup><i>金的故事得到了公众的关注。她在 2019 年出版的《我的朋友安娜》(My Friend
-    Anna)</i>一书中进一步阐述了这个故事。同年，记者<a href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler"
+<p>2018 年，威廉姆斯在<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
+    title="Vanity Fair (magazine)"><i>《名利场》</i></a>杂志上写了一篇关于她与索罗金的经历的长篇文章<sup id="cite_ref-4"
+    class="reference"><a href="#cite_note-4">[4]</a></sup>，索罗金的故事得到了公众的关注。她在 2019 年出版的<i>《我的朋友安娜》</i>一书中进一步阐述了这个故事。同年，记者<a href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler"
     title="Jessica Pressler">杰西卡普莱斯勒为</a><i><a href="https://en.wiki.chinapedia.org/wiki/New_York_(magazine)"
       title="New York (magazine)">纽约</a></i>写了一篇关于索罗金社交名媛生活的文章；<sup id="cite_ref-5" class="reference"><a
       href="#cite_note-5">[5]</a></sup><a href="https://en.wiki.chinapedia.org/wiki/Netflix" title="Netflix">
@@ -2790,7 +2777,7 @@
   <li><a rel="nofollow" class="external text" href="https://www.imdb.com/name/nm10745111/"></a><a
       href="https://en.wiki.chinapedia.org/wiki/IMDb" title="电影数据库">IMDb</a>上<a rel="nofollow" class="external text"
       href="https://www.imdb.com/name/nm10745111/">安娜·索罗金的资料（英文）</a><a href="https://en.wiki.chinapedia.org/wiki/IMDb"
-      title="电影数据库"></a>&nbsp;<a href="https://www.wikidata.org/wiki/Q55080956#P345" title="在维基数据编辑"></a></li>
+      title="电影数据库"></a></li>
 </ul>
 
 
