手动修复链接以及翻译

--- a/html/安娜·索罗金.html
+++ b/html/安娜·索罗金.html
@@ -83,28 +83,24 @@
     title="快闪店">快闪店</a>以及她在实习期间遇到的著名艺术家的展览。她后来制作了虚假的财务文件来证实她拥有数百万欧元信托基金的说法，并伪造了多份电汇确认书。索罗金使用这些文件以及欺诈性支票诱骗银行、熟人和房地产经纪人支付现金并发放大额无抵押贷款。她用这笔钱来资助她奢侈的生活方式，包括在多家高档酒店居住。2013年至2017年间，索罗金诈骗骗取各大金融机构、银行、酒店和个人共计27.5万美元。
 </p>
 <p>2017年，<a href="https://en.wiki.chinapedia.org/wiki/New_York_City_Police_Department"
-    title="纽约市警察局">纽约警察局</a>在她的朋友<a href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams" title="Rachel DeLoache Williams">雷切尔·德洛奇·威廉姆斯 (Rachel DeLoache Williams)</a>的帮助下，在一次<a href="https://en.wiki.chinapedia.org/wiki/Sting_operation" title="卧底行动">诱捕行动</a>中逮捕了索罗金，后者指控索罗金诈骗了她62,000美元。2019年，索罗金在纽约州法院被判犯有<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny" class="mw-redirect"
+    title="纽约市警察局">纽约警察局</a>在她的朋友<a href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams" title="Rachel DeLoache Williams">雷切尔·德洛奇·威廉姆斯</a>的帮助下，在一次<a href="https://en.wiki.chinapedia.org/wiki/Sting_operation" title="卧底行动">诱捕行动</a>中逮捕了索罗金，后者指控索罗金诈骗了她62,000美元。2019年，索罗金在纽约州法院被判犯有<a href="https://en.wiki.chinapedia.org/wiki/Grand_larceny" class="mw-redirect"
     title="Grand larceny">重大盗窃罪</a>未遂、二级盗窃罪和<a href="https://en.wiki.chinapedia.org/wiki/Theft_of_services"
     title="Theft of services">盗窃服务罪</a>，被判处4至12年有期徒刑。服刑两年后，她被<a
     href="https://en.wiki.chinapedia.org/wiki/U.S._Immigration_and_Customs_Enforcement"
-    title="U.S. Immigration and Customs Enforcement">美国移民和海关执法局</a>关押，准备遣返德国。2022 年 10 月 5 日，索罗金获得 10,000
+    title="U.S. Immigration and Customs Enforcement">美国移民和海关执法局</a>关押，准备遣返德国。2022年10月5日，索罗金获得 10,000
   美元的保释金并出狱。<sup id="cite_ref-Reul_3-0" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>自 2022 年 10 月起，索罗金必须在电子监控下进行 24
   小时居家隔离，并且不得使用社交媒体。<sup id="cite_ref-Reul_3-1" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>
 </p>
 <p>2018 年，威廉姆斯在<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
     title="Vanity Fair (magazine)"><i>《名利场》</i></a>杂志上写了一篇关于她与索罗金的经历的长篇文章<sup id="cite_ref-4"
-    class="reference"><a href="#cite_note-4">[4]</a></sup>，索罗金的故事得到了公众的关注。她在 2019 年出版的<i>《我的朋友安娜》</i>一书中进一步阐述了这个故事。同年，记者<a href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler"
-    title="Jessica Pressler">杰西卡普莱斯勒为</a><i><a href="https://en.wiki.chinapedia.org/wiki/New_York_(magazine)"
-      title="New York (magazine)">纽约</a></i>写了一篇关于索罗金社交名媛生活的文章；<sup id="cite_ref-5" class="reference"><a
+    class="reference"><a href="#cite_note-4">[4]</a></sup>，索罗金的故事得到了公众的关注。她在 2019 年出版的《我的朋友安娜》一书中进一步阐述了这个故事。同年，记者<a href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler"
+    title="Jessica Pressler">杰西卡·普莱斯勒</a>为<i><a href="https://en.wiki.chinapedia.org/wiki/New_York_(magazine)"
+      title="New York (magazine)">纽约</a></i>杂志写了一篇关于索罗金社交名媛生活的文章；<sup id="cite_ref-5" class="reference"><a
       href="#cite_note-5">[5]</a></sup><a href="https://en.wiki.chinapedia.org/wiki/Netflix" title="Netflix">
-    Netflix</a>向索罗金支付了 320,000 美元以获得她故事的版权，并将其开发成 2022 年的迷你剧《<i><a
+    Netflix</a>向索罗金支付了320,000美元以获得她故事的版权，并将其开发成2022年的迷你剧《<i><a
       href="https://en.wiki.chinapedia.org/wiki/Inventing_Anna"
-      title="Inventing Anna">发明安娜》</a></i>。索罗金的人生故事一直是其他多个电视节目、访谈、播客和戏剧作品的主题。<a
-    href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)" title="名利场（杂志）"><i></i></a><i></i><a
-    href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler" title="杰西卡·普莱斯勒"></a><i><a
-      href="https://en.wiki.chinapedia.org/wiki/New_York_(magazine)" title="纽约（杂志）"></a></i><sup id="cite_ref-5"
-    class="reference"><a href="#cite_note-5"></a></sup> <a href="https://en.wiki.chinapedia.org/wiki/Netflix"
-    title="网飞"></a><i><a href="https://en.wiki.chinapedia.org/wiki/Inventing_Anna" title="发明安娜"></a></i></p>
+      title="Inventing Anna">创造安娜</a></i>》。索罗金的人生故事一直是其他多个电视节目、访谈、播客和戏剧作品的主题。
+    </p>
 <meta property="mw:PageProp/toc">
 <h2><span class="mw-headline" id="Early_life">早年生活</span><span class="mw-editsection"></span></h2>
 
