手动修复链接以及翻译

--- a/html/安娜·索罗金.html
+++ b/html/安娜·索罗金.html
@@ -91,8 +91,8 @@
   美元的保释金并出狱。<sup id="cite_ref-Reul_3-0" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>自 2022 年 10 月起，索罗金必须在电子监控下进行 24
   小时居家隔离，并且不得使用社交媒体。<sup id="cite_ref-Reul_3-1" class="reference"><a href="#cite_note-Reul-3">[3]</a></sup>
 </p>
-<p>2018 年，威廉姆斯在<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
-    title="Vanity Fair (magazine)">《名利场》</a>杂志上写了一篇关于她与索罗金的经历的长篇文章<sup id="cite_ref-4"
+<p>2018 年，威廉姆斯在《<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
+    title="Vanity Fair (magazine)">名利场</a>》杂志上写了一篇关于她与索罗金的经历的长篇文章<sup id="cite_ref-4"
     class="reference"><a href="#cite_note-4">[4]</a></sup>，索罗金的故事得到了公众的关注。她在 2019 年出版的《我的朋友安娜》一书中进一步阐述了这个故事。同年，记者<a href="https://en.wiki.chinapedia.org/wiki/Jessica_Pressler"
     title="Jessica Pressler">杰西卡·普莱斯勒</a>为<a href="https://en.wiki.chinapedia.org/wiki/New_York_(magazine)"
       title="New York (magazine)">纽约</a>杂志写了一篇关于索罗金社交名媛生活的文章；<sup id="cite_ref-5" class="reference"><a
@@ -134,14 +134,14 @@
       href="#cite_note-parents-8">[8]</a></sup>2012年，她在<a href="https://en.wiki.chinapedia.org/wiki/Berlin" title="Berlin">
     柏林</a>一家<a href="https://en.wiki.chinapedia.org/wiki/Public_relations"
     title="公共关系">公关</a>公司短暂实习。索罗金随后搬到巴黎，通过在法国时尚杂志<a href="https://en.wiki.chinapedia.org/wiki/Purple_(magazine)"
-      title="Purple (magazine)">Purple</a>实习，她每月赚取大约 400 欧元。<sup id="cite_ref-Conned_9-0" class="reference"><a
+      title="Purple (magazine)">Purple</a>实习，她每月赚取大约400欧元。<sup id="cite_ref-Conned_9-0" class="reference"><a
       href="#cite_note-Conned-9">[9]</a></sup>虽然索罗金不经常联系她的父母，但他们资助了她的房租。<sup id="cite_ref-Tricked_7-2"
     class="reference"><a href="#cite_note-Tricked-7">[7] </a></sup><sup id="cite_ref-parents_8-2" class="reference"><a
       href="#cite_note-parents-8">[8] </a></sup><sup id="cite_ref-Conned_9-1" class="reference"><a
       href="#cite_note-Conned-9">[9]</a></sup>大约在那个时候，索罗金开始使用“Anna Delvey”这个名字，她声称这个名字是基于她母亲的<a
-    href="https://en.wiki.chinapedia.org/wiki/Maiden_name" class="mw-redirect" title="Maiden name">婚前姓氏</a>。然而，索罗金的父母表示，他们“不认姓”。<sup id="cite_ref-Conned_9-2" class="reference"><a
+    href="https://en.wiki.chinapedia.org/wiki/Maiden_name" class="mw-redirect" title="Maiden name">婚前姓氏</a>。然而，索罗金的父母表示，他们不认识这个姓。<sup id="cite_ref-Conned_9-2" class="reference"><a
       href="#cite_note-Conned-9">[9]</a></sup>索罗金后来承认是她“想出来的”。<sup id="cite_ref-:0_10-0" class="reference"><a
-      href="#cite_note-:0-10">[10]</a></sup>
+      href="#cite_note10">[10]</a></sup>
 </p>
 <h2><span class="mw-headline" id="Fraud">欺诈</span>
 </h2>
@@ -414,7 +414,7 @@
     href="https://en.wiki.chinapedia.org/wiki/Yves_Saint_Laurent_(brand)" title="伊夫圣罗兰（品牌）">Saint Laurent</a>上衣和<a
     href="https://en.wiki.chinapedia.org/wiki/Victoria_Beckham" title="维多利亚·贝克汉姆">Victoria Beckham</a>裤子。<sup
     id="cite_ref-:0_10-1" class="reference"><a
-      href="#cite_note-:0-10">[10]</a></sup>在审判的星期五，索罗金拒绝进入法庭，因为她不想穿着监狱发给她的衣服出庭，而且她当天的便装“没有被压过”。在一次哭闹和拖延一个半小时开庭后，她被法官强制出庭。<sup
+      href="#cite_note10">[10]</a></sup>在审判的星期五，索罗金拒绝进入法庭，因为她不想穿着监狱发给她的衣服出庭，而且她当天的便装“没有被压过”。在一次哭闹和拖延一个半小时开庭后，她被法官强制出庭。<sup
     id="cite_ref-28" class="reference"><a href="#cite_note-28">[28] </a></sup><sup id="cite_ref-29" class="reference"><a
       href="#cite_note-29">[29]</a></sup>
 </p>
@@ -923,7 +923,7 @@
             class="Z3988"></span>
         </span>
       </li>
-      <li id="cite_note-:0-10"><span class="mw-cite-backlink">^<a href="#cite_ref-:0_10-0"><span
+      <li id="cite_note10"><span class="mw-cite-backlink">^<a href="#cite_ref-:0_10-0"><span
               class="cite-accessibility-label">跳转至：</span><sup><b>a </b></sup></a> <a
             href="#cite_ref-:0_10-1"><sup><b>b</b></sup></a></span> <span class="reference-text"><cite
             id="CITEREFMinutaglio2022" class="citation web cs1"> Minutaglio, Rose（2022 年 2 月 15 日）。</cite></span><span
