手动修复链接以及翻译，重写部分生硬句式

--- a/html/安娜·索罗金.html
+++ b/html/安娜·索罗金.html
@@ -153,35 +153,21 @@
   平方米），由<a href="https://en.wiki.chinapedia.org/wiki/Aby_Rosen" title="阿比·罗森">Aby Rosen</a>的 RFR
   Holdings公司拥有，作为一个多功能活动场所和艺术工作室，她在那里规划了一个<a href="https://en.wiki.chinapedia.org/wiki/Visual_arts"
     title="视觉艺术">视觉艺术</a>中心，里面有由艺术家<a href="https://en.wiki.chinapedia.org/wiki/Daniel_Arsham"
-    title="Daniel Arsham">Daniel Arsham策划的</a><a href="https://en.wiki.chinapedia.org/wiki/Pop-up_shop"
+    title="Daniel Arsham">Daniel Arsham</a>策划的<a href="https://en.wiki.chinapedia.org/wiki/Pop-up_shop"
     class="mw-redirect" title="快闪店">快闪店</a>，她的实习熟人之一，以及<a href="https://en.wiki.chinapedia.org/wiki/Urs_Fischer"
     title="Urs Fischer">Urs Fischer</a>和<a href="https://en.wiki.chinapedia.org/wiki/Damien_Hirst"
     title="Damien Hirst">Damien Hirst</a>的展览、<a href="https://en.wiki.chinapedia.org/wiki/Jeff_Koons"
     title="Jeff Koons">杰夫·昆斯</a>和<a href="https://en.wiki.chinapedia.org/wiki/Tracey_Emin"
     title="Tracey Emin">翠西·艾敏</a>。<sup id="cite_ref-Tricked_7-3" class="reference"><a
-      href="#cite_note-Tricked-7">[7]</a></sup><a href="https://en.wiki.chinapedia.org/wiki/Santiago_Calatrava"
-    title="Santiago Calatrava">她从建筑师圣地亚哥·卡拉特拉瓦 (Santiago Calatrava)</a>的儿子那里获得了规划帮助。<sup id="cite_ref-2years_11-0"
-    class="reference"><a href="#cite_note-2years-11">[11]</a></sup><a
-    href="https://en.wiki.chinapedia.org/wiki/Roo_Rogers" title="Roo Rogers">她还与Roo Rogers</a>讨论了场地的饮料销售问题。<sup
-    id="cite_ref-Bizarre_12-0" class="reference"><a href="#cite_note-Bizarre-12">[12]</a></sup><a
-    href="https://en.wiki.chinapedia.org/wiki/Daniel_Arsham" title="丹尼尔阿尔轩"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Urs_Fischer" title="乌尔斯菲舍尔"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Damien_Hirst" title="达明·赫斯特"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Jeff_Koons" title="杰夫昆斯"></a><a
-    href="https://en.wiki.chinapedia.org/wiki/Tracey_Emin" title="翠西艾敏"></a><sup id="cite_ref-Tricked_7-3"
-    class="reference"><a href="#cite_note-Tricked-7"></a></sup><a
-    href="https://en.wiki.chinapedia.org/wiki/Santiago_Calatrava" title="圣地亚哥·卡拉特拉瓦"></a><sup id="cite_ref-2years_11-0"
-    class="reference"><a href="#cite_note-2years-11"></a></sup><a href="https://en.wiki.chinapedia.org/wiki/Roo_Rogers"
-    title="罗杰斯"></a><sup id="cite_ref-Bizarre_12-0" class="reference"><a href="#cite_note-Bizarre-12"></a></sup>
+      href="#cite_note-Tricked-7">[7]</a></sup>她从建筑师<a href="https://en.wiki.chinapedia.org/wiki/Santiago_Calatrava"
+    title="Santiago Calatrava">圣地亚哥·卡拉特拉瓦 (Santiago Calatrava)</a>的儿子那里获得了规划帮助。<sup id="cite_ref-2years_11-0"
+    class="reference"><a href="#cite_note-2years-11">[11]</a></sup>她还与<a
+    href="https://en.wiki.chinapedia.org/wiki/Roo_Rogers" title="Roo Rogers">Roo Rogers</a>讨论了场地的饮料销售问题。<sup
+    id="cite_ref-Bizarre_12-0" class="reference"><a href="#cite_note-Bizarre-12">[12]</a></sup>
 </p>
-<p><a href="https://en.wiki.chinapedia.org/wiki/The_Standard,_High_Line" title="The Standard, High Line">根据 DJ Elle Dee
-    的说法，她被拍到与 索罗金在The Standard, High Line 的</a>派对上合影<a
-    href="https://en.wiki.chinapedia.org/wiki/The_Standard,_High_Line"
-    title="标准高线酒店"></a>节目中，索罗金假扮富家千金吹嘘自己穿的衣服品牌，还向参加派对的人要了睡觉的地方。当他们拒绝时，她在车里睡了一夜。Dee 参加了 Sorokin
-  组织的多个活动，她邀请了一些她“几乎不认识的人……就好像他们是第二次见面，有点像我们。每个人都围坐在一起，静静地盯着自己的手机看。” Dee 将 索罗金描述为“有权有势且刻薄——尤其是对服务行业的人而言”。Dee 还描述了
-  索罗金如何依靠她和其他熟人来支付她的费用，声称她忘记了她的钱包，或者这是紧急情况，她的信用卡无法使用。这些费用从酒吧的饮料到酒店住宿，<sup id="cite_ref-14" class="reference"><a
-      href="#cite_note-14">[14]</a></sup>
+<p>DJ Elle Dee 被拍到与索罗金在<a href="https://en.wiki.chinapedia.org/wiki/The_Standard,_High_Line" title="The Standard, High Line">高线公园标准酒店</a>的派对上合影，根据她的说法，索罗金假扮富家千金吹嘘自己穿的衣服品牌，还向参加派对的人要了睡觉的地方。当他们拒绝时，她在车里睡了一夜。Dee 参加了索罗金组织的多个活动，她邀请了一些她“几乎不认识的人…”就好像他们是第二次见面，有点像我们。每个人都围坐在一起，静静地盯着自己的手机看。” Dee 将索罗金描述为“有权势且刻薄——尤其是对服务员”。Dee 还描述了索罗金如何依靠她和其他熟人来支付她的费用，声称她忘记了她的钱包，或者这是紧急情况，她的信用卡无法使用。这些费用从酒吧的饮料到酒店住宿，<sup id="cite_ref-14" class="reference"><a href="#cite_note-14">[14]</a></sup>
 </p>
+
 <p>2015年，索罗金在一次晚宴上结识了艺术收藏家、<a href="https://en.wiki.chinapedia.org/wiki/University_of_Pennsylvania"
     title="宾夕法尼亚大学">宾夕法尼亚大学</a>学生<a href="https://en.wiki.chinapedia.org/wiki/Michael_Xufu_Huang"
     title="黄旭福">黄旭福。</a>得知黄打算参加<a href="https://en.wiki.chinapedia.org/wiki/Venice_Biennale"
