手动修复链接，基于deepl改进中文翻译

--- a/html/安娜·索罗金.html
+++ b/html/安娜·索罗金.html
@@ -167,72 +167,56 @@
 </p>
 <p>DJ Elle Dee 被拍到与索罗金在<a href="https://en.wiki.chinapedia.org/wiki/The_Standard,_High_Line" title="The Standard, High Line">高线公园标准酒店</a>的派对上合影，根据她的说法，索罗金假扮富家千金吹嘘自己穿的衣服品牌，还向参加派对的人要了睡觉的地方。当他们拒绝时，她在车里睡了一夜。Dee 参加了索罗金组织的多个活动，她邀请了一些她“几乎不认识的人…”就好像他们是第二次见面，有点像我们。每个人都围坐在一起，静静地盯着自己的手机看。” Dee 将索罗金描述为“有权势且刻薄——尤其是对服务员”。Dee 还描述了索罗金如何依靠她和其他熟人来支付她的费用，声称她忘记了她的钱包，或者这是紧急情况，她的信用卡无法使用。这些费用从酒吧的饮料到酒店住宿，<sup id="cite_ref-14" class="reference"><a href="#cite_note-14">[14]</a></sup>
 </p>
-
 <p>2015年，索罗金在一次晚宴上结识了艺术收藏家、<a href="https://en.wiki.chinapedia.org/wiki/University_of_Pennsylvania"
     title="宾夕法尼亚大学">宾夕法尼亚大学</a>学生<a href="https://en.wiki.chinapedia.org/wiki/Michael_Xufu_Huang"
-    title="黄旭福">黄旭福。</a>得知黄打算参加<a href="https://en.wiki.chinapedia.org/wiki/Venice_Biennale"
-    title="威尼斯双年展">威尼斯双年展</a>，索罗金问他是否可以陪同。Huang 同意并为 索罗金预订了机票和酒店房间，条件是他将报销 2,000 至 3,000
-  美元的费用。回到纽约后，索罗金似乎“忘记”了这个安排，没有付款。<sup id="cite_ref-Museum_13-1" class="reference"><a
-      href="#cite_note-Museum-13">[13]</a></sup>黄最初认为索罗金只是<a href="https://en.wiki.chinapedia.org/wiki/Absent-minded"
+    title="黄勖夫">黄勖夫。</a>得知黄打算参加<a href="https://en.wiki.chinapedia.org/wiki/Venice_Biennale"
+    title="威尼斯双年展">威尼斯双年展</a>，索罗金问他是否可以陪同。黄同意并为 索罗金预订了机票和酒店房间，条件是他要报销2,000至3,000美元的费用。回到纽约后，索罗金似乎“忘记”了这个安排，没有付款。<sup id="cite_ref-Museum_13-1" class="reference"><a href="#cite_note-Museum-13">[13]</a></sup>黄最初认为索罗金只是<a href="https://en.wiki.chinapedia.org/wiki/Absent-minded"
     class="mw-redirect" title="恍惚">心不在焉</a>。同样在2015年，索罗金参加了<a href="https://en.wiki.chinapedia.org/wiki/Miami_Beach"
     class="mw-redirect" title="Miami Beach">迈阿密海滩</a>的<a href="https://en.wiki.chinapedia.org/wiki/Art_Basel"
-    title="巴塞尔艺术展">巴塞尔艺术展</a><a href="https://en.wiki.chinapedia.org/wiki/Miami_Beach" class="mw-redirect"
-    title="迈阿密滩"></a>. 2016 年 1
-  月，索罗金聘请了一家公关公司在萨黛尔的餐厅为自己预订生日派对；在她的信用卡被拒绝并且黄在活动中的照片被发布在社交媒体上后，餐厅工作人员询问黄是否有索罗金的联系方式。这时，Huang 对 Sorokin
-  产生了怀疑，还注意到她奇怪地总是用现金付款，而且住在旅馆而不是公寓。<sup id="cite_ref-Tricked_7-4" class="reference"><a
-      href="#cite_note-Tricked-7">[7]</a></sup>他最终得到了偿还，但是是从一个陌生名字的<a href="https://en.wiki.chinapedia.org/wiki/Venmo"
-    title="文墨">Venmo</a>账户中偿还的。然后他阻止了索罗金在社交媒体上与他的联系，结束了他们的友谊。<sup id="cite_ref-Museum_13-2" class="reference"><a
+    title="巴塞尔艺术展">巴塞尔艺术展</a>. 2016年1月，索罗金聘请了一家公关公司在萨黛尔的餐厅为自己预订生日派对；在她的信用卡被拒绝并且黄在活动中的照片被发布在社交媒体上后，餐厅工作人员询问黄是否有索罗金的联系方式。这时黄对索罗金产生了怀疑，还注意到她奇怪地总是用现金付款，而且住在旅馆而不是公寓。<sup id="cite_ref-Tricked_7-4" class="reference"><a
+      href="#cite_note-Tricked-7">[7]</a></sup>他最终拿到了钱，但是是从一个陌生的<a href="https://en.wiki.chinapedia.org/wiki/Venmo"
+    title="文墨">Venmo</a>账户来的。然后他在社交媒体上拉黑了索罗金，断绝往来。<sup id="cite_ref-Museum_13-2" class="reference"><a
       href="#cite_note-Museum-13">[13]</a></sup>
 </p>
 <p>2016 年 2 月，当索罗金住在标准高线公园的酒店房间时，她在一家夜总会认识了当时在<a href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)"
       title="Vanity Fair (magazine)">名利场</a>担任图片编辑的<a
     href="https://en.wiki.chinapedia.org/wiki/Rachel_DeLoache_Williams" title="雷切尔·德洛奇·威廉姆斯">雷切尔·德洛奇·威廉姆斯 (Rachel
-    DeLoache Williams) 。</a>威廉姆斯形容索罗金“对服务员要求苛刻且粗鲁”，并表示“当电梯打开时，她不会等其他人下车”。尽管如此，威廉姆斯还是与索罗金成为了密友，并在后来帮助她被捕。<sup
-    id="cite_ref-shepaid_15-0" class="reference"><a href="#cite_note-shepaid-15">[15]</a></sup><a
-      href="https://en.wiki.chinapedia.org/wiki/Vanity_Fair_(magazine)" title="名利场（杂志）"></a><sup
-    id="cite_ref-shepaid_15-0" class="reference"><a href="#cite_note-shepaid-15"></a></sup>
+    DeLoache Williams) 。</a>威廉姆斯形容索罗金“对服务员要求苛刻且粗鲁”，并表示“当电梯打开时，她不会等其他人先下”。尽管如此，威廉姆斯还是与索罗金成为了密友，并在后来协助逮捕索罗金。<sup
+    id="cite_ref-shepaid_15-0" class="reference"><a href="#cite_note-shepaid-15">[15]</a></sup>
 </p>
 <p>索罗金使用<a href="https://en.wiki.chinapedia.org/wiki/Microsoft_Word" title="微软Word">Microsoft
-    Word</a>创建虚假的银行对账单和其他财务文件，声称她在瑞士银行账户中拥有 6000 万欧元，但无法访问这些账户，因为这些账户是受信任的，而且她在美国 [7] [11] <sup
-    id="cite_ref-Tricked_7-5" class="reference"><a href="#cite_note-Tricked-7">[ </a></sup><sup
-    id="cite_ref-2years_11-1" class="reference"><a href="#cite_note-2years-11">9 </a></sup><sup id="cite_ref-Conned_9-4"
-    class="reference"><a href="#cite_note-Conned-9">] ]</a></sup> 索罗金的一位熟人帮她联系了 Gibson Dunn 的律师 Andrew Lance [ <a
-    href="https://en.wiki.chinapedia.org/wiki/Gibson_Dunn" title="Gibson Dunn">16 </a><sup id="cite_ref-16"
-    class="reference"><a href="#cite_note-16">]</a></sup>，后者又让她联系了几家大型金融机构，包括<a
+    Word</a>创建虚假的银行对账单和其他财务文件，声称她在瑞士银行账户中拥有6000万欧元，但由于这些账户是托管的，而且她在美国，所以无法进入这些账户。<sup
+    id="cite_ref-Tricked_7-5" class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup><sup
+    id="cite_ref-2years_11-1" class="reference"><a href="#cite_note-2years-11">[11]</a></sup><sup id="cite_ref-Conned_9-4"
+    class="reference"><a href="#cite_note-Conned-9">[9]</a></sup>索罗金的一位熟人帮她联系了<a
+    href="https://en.wiki.chinapedia.org/wiki/Gibson_Dunn" title="Gibson Dunn">Gibson Dunn</a>的律师 Andrew Lance<sup id="cite_ref-16"
+    class="reference"><a href="#cite_note-16">[16]</a></sup>，后者又让她联系了几家大型金融机构，包括<a
     href="https://en.wiki.chinapedia.org/wiki/City_National_Bank_(California)"
-    title="City National Bank (California)">City National Bank</a>和<a
+    title="City National Bank (California)">City National 银行</a>和<a
     href="https://en.wiki.chinapedia.org/wiki/Fortress_Investment_Group" title="Fortress Investment Group">Fortress
     Investment Group</a>。<sup id="cite_ref-Tricked_7-6" class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
-  2016 年 11 月，索罗金向 City National 提交了虚假文件，作为 2200 万美元贷款申请的一部分。<sup id="cite_ref-Guilty_17-0" class="reference"><a
-      href="#cite_note-Guilty-17">[17]</a></sup><a href="https://en.wiki.chinapedia.org/wiki/Gibson_Dunn"
-    title="吉布森邓恩"></a><a href="https://en.wiki.chinapedia.org/wiki/City_National_Bank_(California)"
-    title="城市国家银行（加利福尼亚州）"></a><a href="https://en.wiki.chinapedia.org/wiki/Fortress_Investment_Group"
-    title="丰泽投资集团"></a><sup id="cite_ref-Tricked_7-6" class="reference"><a href="#cite_note-Tricked-7"></a></sup><sup
-    id="cite_ref-Guilty_17-0" class="reference"><a href="#cite_note-Guilty-17"></a></sup>由于索罗金未能提供瑞士资产的来源，City National
-  拒绝提供信贷，她随后向 Fortress 申请贷款。如果 索罗金支付 100,000 美元支付与该申请相关的法律费用，Fortress 同意考虑该申请。2016 年 12 月，由于索罗金无力支付租金，<a
+  2016 年 11 月，索罗金向 City National 提交了虚假文件，作为2200万美元贷款申请的部分材料。<sup id="cite_ref-Guilty_17-0" class="reference"><a
+      href="#cite_note-Guilty-17">[17]</a></sup>由于索罗金未能提供瑞士资产的来源，City National 银行拒绝提供信贷，她随后向 Fortress 申请贷款。如果索罗金支付100,000美元支付与该申请相关的法律费用，Fortress 同意考虑该申请。2016 年 12 月，由于索罗金无力支付租金，<a
     href="https://en.wiki.chinapedia.org/wiki/Church_Missions_House" title="教会布道所">Church Missions House</a>转而租给了<a
-    href="https://en.wiki.chinapedia.org/wiki/Fotografiska_New_York" title="纽约摄影">Fotografiska New York</a>。<sup
+    href="https://en.wiki.chinapedia.org/wiki/Fotografiska_New_York" title="纽约摄影">Fotografiska纽约博物馆</a>。<sup
     id="cite_ref-Tricked_7-7" class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
 </p>
-<p>2017 年 1 月 12 日，索罗金说服 City National 向她提供 100,000 美元的临时透支额度，并承诺会及时偿还。索罗金提供了一个不存在的业务经理“Peter Hennecke”的虚假<a
+<p>2017 年 1 月 12 日，索罗金说服 City National 银行向她提供100,000美元的临时透支额度，并承诺会及时偿还。索罗金提供了一个不存在的业务经理“Peter Hennecke”的虚假<a
     href="https://en.wiki.chinapedia.org/wiki/AOL"
-    title="美国在线">AOL电子邮件地址；</a>当怀疑出现时，索罗金声称他已经死了，然后发明了一个新的角色，“贝蒂娜·瓦格纳”。<sup id="cite_ref-Tricked_7-8"
-    class="reference"><a href="#cite_note-Tricked-7">[7] </a></sup><sup id="cite_ref-Guilty_17-1" class="reference"><a
+    title="美国在线">AOL</a>电子邮件地址；当怀疑出现时，索罗金声称他已经死了，然后发明了一个新的角色，“贝蒂娜·瓦格纳”。<sup id="cite_ref-Tricked_7-8"
+    class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup><sup id="cite_ref-Guilty_17-1" class="reference"><a
       href="#cite_note-Guilty-17">[17]</a></sup>检察官后来在她的审判中表明，她曾使用<a
     href="https://en.wiki.chinapedia.org/wiki/Google_Search" title="谷歌搜索">谷歌</a>查询“创建虚假的无法追踪的电子邮件”。<sup
-    id="cite_ref-2years_11-2" class="reference"><a href="#cite_note-2years-11">[11]</a></sup>索罗金将 100,000 美元汇给
-  Fortress 用于贷款申请，但 Fortress 的一位董事总经理对 Sorokin
-  的申请产生了怀疑，因为她的文书工作存在差异——例如，她声称自己有德国血统，但她的护照显示她出生在俄罗斯。当董事安排与她在瑞士的银行家会面以核实索罗金的资产时，她撤回了贷款申请以防止进一步审查。<a
-    href="https://en.wiki.chinapedia.org/wiki/Due_diligence" title="尽职调查">2017 年 2 月，作为尽职调查</a>程序的一部分，Fortress 未花费的透支部分
-  55,000 美元被退还给索罗金。<sup id="cite_ref-Guilty_17-2" class="reference"><a href="#cite_note-Guilty-17">[17] </a></sup><sup
+    id="cite_ref-2years_11-2" class="reference"><a href="#cite_note-2years-11">[11]</a></sup>索罗金将100,000美元汇给 Fortress 用于贷款申请，但 Fortress 的一位董事总经理对索罗金的申请产生了怀疑，因为她的申请材料存在漏洞：例如，她声称自己有德国血统，但她的护照显示她出生在俄罗斯。当董事安排与她在瑞士的银行家会面以核实索罗金的资产时，她撤回了贷款申请以防止进一步审查。2017年2月，作为<a
+    href="https://en.wiki.chinapedia.org/wiki/Due_diligence" title="尽职调查">尽职调查</a>程序的一部分，Fortress将申请费未花费55,000美元退还给索罗金。<sup id="cite_ref-Guilty_17-2" class="reference"><a href="#cite_note-Guilty-17">[17] </a></sup><sup
     id="cite_ref-Tricked_7-9" class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>索罗金随后在奢侈服装、电子产品和<a
-    href="https://en.wiki.chinapedia.org/wiki/Personal_trainer" title="私人教练">私人教练</a>以及 800 美元的<a
-    href="https://en.wiki.chinapedia.org/wiki/Hair_highlighting" title="头发高光">美发</a>和 400 美元上大手大脚<a
+    href="https://en.wiki.chinapedia.org/wiki/Personal_trainer" title="私人教练">私人教练</a>以及800美元的<a
+    href="https://en.wiki.chinapedia.org/wiki/Hair_highlighting" title="头发高光">美发</a>和400美元上大手大脚<a
     href="https://en.wiki.chinapedia.org/wiki/Eyelash_extensions" title="睫毛延长">睫毛延伸</a>。<sup id="cite_ref-Tricked_7-10"
     class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
 </p>
 <p>2017年2月18日，索罗金入住了位于<a href="https://en.wiki.chinapedia.org/wiki/Soho,_Manhattan" class="mw-redirect"
-    title="苏活区，曼哈顿">曼哈顿Soho</a>区的11 Howard酒店400美元/晚的房间。<sup id="cite_ref-Tricked_7-11" class="reference"><a
+    title="苏豪区，曼哈顿">曼哈顿苏豪区</a>的11 Howard酒店400美元/晚的房间。<sup id="cite_ref-Tricked_7-11" class="reference"><a
       href="#cite_note-Tricked-7">[7]</a></sup><a href="https://en.wiki.chinapedia.org/wiki/Concierge"
     title="门房">她经常给礼宾部</a>100 美元的现金小费，她结识了礼宾部和其他员工，以完成简单的任务，例如餐厅推荐或将包裹送到她的房间。<sup id="cite_ref-Tricked_7-12"
     class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>尽管如此，大多数员工还是觉得索罗金很烦人，并将她的评论描述为不礼貌和阶级歧视。<sup
@@ -242,27 +226,27 @@
     Coucou用餐，索罗金在那里结识了厨师</a><a href="https://en.wiki.chinapedia.org/wiki/Daniel_Rose_(chef)"
     title="丹尼尔·罗斯（主厨）">丹尼尔罗斯</a><sup id="cite_ref-shepaid_15-1" class="reference"><a
       href="#cite_note-shepaid-15">[15]</a></sup>并将餐费记在她的房间里。<sup id="cite_ref-Tricked_7-14" class="reference"><a
-      href="#cite_note-Tricked-7">[7]</a></sup>她为门房提供按摩、美甲服务，并与名人私人教练<a
+      href="#cite_note-Tricked-7">[7]</a></sup>她为门房安排按摩、美甲服务，并与知名私人教练<a
     href="https://en.wiki.chinapedia.org/wiki/Kacy_Duke" title="凯西公爵">Kacy Duke</a>进行会谈。<sup id="cite_ref-Tricked_7-15"
     class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
 </p>
-<p>在管理人员发现索罗金没有登记信用卡后，他们坚持要她结清 30,000 美元的账单。索罗金将一箱 1975 年的<a
+<p>在管理人员发现索罗金没有登记信用卡后，他们坚持要她结清30,000美元的账单。索罗金将一箱1975年的<a
     href="https://en.wiki.chinapedia.org/wiki/Dom_P%C3%A9rignon" title="唐培里侬">Dom
     Pérignon</a>香槟送给员工，试图让他们站在她这边；酒店政策禁止工作人员接受礼物。<sup id="cite_ref-Tricked_7-16" class="reference"><a
-      href="#cite_note-Tricked-7">[7]</a></sup>到 2017 年 3 月，在收到贷款申请费剩余的 55,000 美元一个月后，由于挥霍无度，Sorokin
-  的钱已经花光了。然后她会提议带朋友出去喝酒和吃饭，但到了付账的时候，她会声称她忘记了信用卡，或者她的信用卡无法使用。<sup id="cite_ref-Guilty_17-3" class="reference"><a
+      href="#cite_note-Tricked-7">[7]</a></sup>到2017年3月，在收到贷款申请费剩余的55,000美元一个月后，由于挥霍无度，索罗金的钱已经花光了。然后她会提议带朋友出去喝酒和吃饭，但到了付账的时候，她会声称她忘记了信用卡，或者她的信用卡无法使用。<sup id="cite_ref-Guilty_17-3" class="reference"><a
       href="#cite_note-Guilty-17">[17]</a></sup>此时，索罗金在纽约社交圈非常活跃；她参加了她认识的晚宴<a
     href="https://en.wiki.chinapedia.org/wiki/Macaulay_Culkin" title="麦考利克金">Macaulay Culkin</a>和<a
     href="https://en.wiki.chinapedia.org/wiki/Martin_Shkreli" title="马丁·什克雷利">Martin Shkreli</a>。<sup
     id="cite_ref-Tricked_7-17" class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
 </p>
-<p>2017 年 4 月，索罗金将价值 160,000 美元的欺诈性支票存入<a href="https://en.wiki.chinapedia.org/wiki/Citibank"
-    title="花旗银行">花旗银行</a>账户，她从中取回了 70,000 美元。<sup id="cite_ref-against_1-3" class="reference"><a
+<p>2017年4月，索罗金将价值160,000美元的欺诈性支票存入<a href="https://en.wiki.chinapedia.org/wiki/Citibank"
+    title="花旗银行">花旗银行</a>账户，她从中取回了70,000美元。<sup id="cite_ref-against_1-3" class="reference"><a
       href="#cite_note-against-1">[1]</a></sup>然后她将 30,000 美元电汇给 11 Howard 以支付未付账单。<sup id="cite_ref-Tricked_7-18"
     class="reference"><a href="#cite_note-Tricked-7">[7]</a></sup>
 </p>
-<p>2017 年 5 月，索罗金通过伪造<a href="https://en.wiki.chinapedia.org/wiki/Deutsche_Bank" title="Deutsche Bank">德意志银行的</a><a
-    href="https://en.wiki.chinapedia.org/wiki/Wire_transfer" title="电汇">电汇确认</a>书并支付 35,390 美元的费用，预订了经<a
+
+<p>2017年5月，索罗金通过发送一份伪造的<a href="https://en.wiki.chinapedia.org/wiki/Deutsche_Bank" title="Deutsche Bank">德意志银行</a>的<a
+    href="https://en.wiki.chinapedia.org/wiki/Wire_transfer" title="电汇">电汇</a>确认书，以支付35,390美元的费用，预订了经<a
     href="https://en.wiki.chinapedia.org/wiki/Blade_(company)" title="Blade (company)">布拉德</a>飞往<a
     href="https://en.wiki.chinapedia.org/wiki/Omaha,_Nebraska" title="Omaha, Nebraska">内布拉斯加州奥马哈</a>的公务机往返包机，参加<a
     href="https://en.wiki.chinapedia.org/wiki/Berkshire_Hathaway" title="Berkshire Hathaway">伯克希尔哈撒韦公司</a>的年会，目的是会见<a
